--- a/style.css
+++ b/style.css
@@ -1,21 +1,29 @@
 body {
  margin: 0;
  padding: 0;
- position: absolute;
 }
-.header {
- margin-top: 0px;
- margin-left: 0px;
- width: 100vw;
- height: 10vw;
- background-color: blue;
+.container {
+  height: 1000px;
+  background-color: lightblue;
+  border: 20px solid blue;
+  position: relative;
 }
-h1 {
-    display: block;
-    font-size: 2em;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
+.welcome {
+  background-color: lightblue;
+  border: 20px solid blue;
+  font-size: 2vw;
+}
+div.block {
+width: 100px;
+height: 100px;
+line-height: 100px;
+border: 1px solid black;
+position: absolute;
+text-align: center;             
+background: rgb(0, 150, 0);
+background: rgba(0, 150, 0, .5);
+}
+#1 {
+	left: 2px;
+  top: 20px;
 }
