--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
 }
 .welcome {
 	background-color: #0a0008;
-	color: #ff00d0;
 	text-align: center;
+}
+.wyndtext {
+	color: #ff00d0;
+	text-decoration: underline;
 }
